--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,97 @@
+header {
+
+  .header-panel {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 50px;
+    background: #fff;
+    display: flex;
+    justify-content: space-between;
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+	}
+	.language {
+		&__active {
+			font-weight: 600;
+			cursor: pointer;
+		}
+	}
+  }
+
+  nav {
+    // width: calc(100% - 230px - 230px);
+    height: 100%;
+
+    // @media screen and (max-width: 1280px) {
+    //   display: none;
+    // }
+
+    ul {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+
+      li {
+        font-size: 14px;
+        font-weight: 500;
+        height: 100%;
+
+        a {
+          padding: 26px 16px;
+          color: #2c256b;
+          // position: relative;
+          transition: 0.2s;
+          font-size: 17px;
+          letter-spacing: 1px;
+          height: 100%;
+          display: flex;
+          align-items: center;
+		  text-align: center;
+		  position: relative;
+
+          // @media screen and (max-width: 1600px) {
+          //     padding: 0 20px;
+          // }
+          &:after {
+			content: "";
+			height: 4px;
+			background: #a40c0f;
+			width: 100%;
+			position: absolute;
+			bottom: -2px;
+			left: 0;
+			opacity: 0;
+			visibility: hidden;
+			transition: 0.2s;
+		  }
+
+
+          &:hover {
+            // color: $c-light-blue;
+            &:after {
+              opacity: 1;
+              visibility: visible;
+            }
+          }
+
+          &.active {
+            // color: $c-light-blue;
+
+            &:after {
+              opacity: 1;
+              visibility: visible;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 // header {
 //   position: fixed;
 //   width: 100%;
@@ -92,7 +186,7 @@
 //     justify-content: space-between;
 //     align-items: center;
 //     width: 230px;
-  
+
 //     &.unauthorized {
 //       justify-content: flex-end;
 //     }
@@ -212,14 +306,14 @@
 //           }
 //         }
 //         &:first-child {
-     
+
 //           padding: 5px 30px 8px 0px;
 //           padding-left: 40px;
 //           position: relative;
 //           @media screen and (max-width: 480px) {
 //             padding: 20px 20px;
 //           }
- 
+
 //         }
 //       }
 //     }
@@ -429,7 +523,7 @@
 //       @media screen and (max-width: 600px) {
 //         left: 25px;
 //       }
- 
+
 //     }
 
 //     // .right.authorized,
