--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,118 +4,26 @@
 @import "header.scss";
 @import "buttons.scss";
 @import "fonts.scss";
+@import "home-page.scss";
 
 body {
-    // font-family: "HelveticaNeueCyr", sans-serif;
+  font-family: "Raleway regular", sans-serif;
 }
 
 .container {
-    width: 100%;
-    max-width: 1304px;
-    min-width: 300px;
-    margin: auto;
-    padding: 0 40px;
+  width: 100%;
+  max-width: 1304px;
+  min-width: 300px;
+  margin: auto;
+  padding: 0 40px;
 
-    @media screen and (max-width: 600px) {
-        padding: 0 20px;
-    }
+  @media screen and (max-width: 600px) {
+    padding: 0 20px;
+  }
 }
 
 main {
-    overflow: hidden;
+  overflow: hidden;
+  min-height: calc(100% -36px);
 }
 
-
-// .slick-slider {
-//     .slick-controls-wrapper {
-//         width: 296px;
-//         left: 0;
-//         right: 0;
-//         margin: 34px auto 0;
-//         position: relative;
-
-//         @media screen and (max-width: 720px) {
-//             display: none;
-//         }
-//     }
-
-//     .slick-dots {
-//         width: 250px;
-//         left: 0;
-//         right: 0;
-//         margin: auto;
-//         position: absolute;
-//         top: calc(100% + 38px);
-//         display: block;
-//         padding: 0;
-//         list-style: none;
-//         text-align: center;
-
-
-//         li {
-//             position: relative;
-//             display: inline-block;
-//             width: 20px;
-//             height: 20px;
-//             margin: 0 10px;
-//             padding: 0;
-//             cursor: pointer;
-
-//             &.slick-active {
-//                 button {
-//                     background: #FFFF00;
-//                     width: 8px;
-//                     height: 8px;
-//                     padding: 3px;
-//                 }
-//             }
-
-//             button {
-//                 font-size: 0;
-//                 line-height: 0;
-//                 display: block;
-//                 width: 10px;
-//                 height: 10px;
-//                 margin: auto;
-//                 padding: 5px;
-//                 cursor: pointer;
-//                 color: transparent;
-//                 border: none;
-//                 outline: none;
-//                 background: #DADADA;
-//                 border-radius: 100%;
-//             }
-//         }
-//     }
-
-
-//     .slick-prev,
-//     .slick-next {
-//         border: none;
-//         top: 0;
-//         bottom: 0;
-//         cursor: pointer;
-//         outline: none;
-//         transition: 0.2s;
-
-//         &:hover {
-//             transform: scale(1.1);
-//         }
-//     }
-
-//     .slick-prev.slick-arrow {
-//         width: 35px;
-//         height: 32px;
-//         position: absolute;
-//         left: 0;
-//         background: url(../img/left-arrow.svg) no-repeat;
-//     }
-
-//     .slick-next.slick-arrow {
-//         width: 35px;
-//         height: 32px;
-//         position: absolute;
-//         right: 0;
-//         background: url(../img/right-arrow.svg) no-repeat;
-//     }
-// }
