--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -2,6 +2,7 @@ footer {
     background: #2c256b;
     padding: 9px 0;
     border-top: 4px solid #bb2b31;
+    position: relative;
     .container {
         display: flex;
         justify-content: space-between;
