--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -2,12 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  //   min-height: 80vh;
+
   .header-image {
     width: 50%;
     background: url(../img/main-header-bg.png) no-repeat;
     background-size: cover;
     background-position: center;
+    min-height: calc(100% - 200px);
   }
 
   .header-description {
@@ -17,6 +18,7 @@
     display: flex;
     align-content: center;
     flex-wrap: wrap;
+    min-height: calc(100% - 200px);
     .container {
       padding-right: 40%;
     }
@@ -49,18 +51,21 @@
     &__item {
       height: 150px;
       padding: 20px;
-      background: #ffffff;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 8px;
+      background: #444;
+      // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      // border-radius: 8px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       margin: 18px 15px;
+      outline: none;
     }
   }
 
   .slick-slider {
     width: 100%;
+    height: 200px;
+    padding: 0 100px;
     //     .slick-controls-wrapper {
     //         width: 296px;
     //         left: 0;
