--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,10 +1,11 @@
 footer {
     background: #2c256b;
-    padding: 9px 0;
+    padding: 13px 0;
     border-top: 4px solid #bb2b31;
     position: relative;
     .container {
         display: flex;
+        max-width: 1254px;
         justify-content: space-between;
     }
     .copyright {
