--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,33 +1,59 @@
 header {
-
-  .header-panel {
-    position: absolute;
+  position: relative;
+  &:before {
+    content: "";
+    height: 5px;
+    background: #db272f;
     width: 100%;
     left: 0;
-    top: 50px;
+    top: 0;
+    position: fixed;
+  }
+  .header-shadow {
+    width: 100%;
+    top: 113px;
+    position: absolute;
+    z-index: -1;
+    height: 10px;
+    box-shadow: 0 0 5px -2px #000;
+  }
+  .header-panel {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    left: 0;
+    top: 42px;
     background: #fff;
     display: flex;
     justify-content: space-between;
+
     .container {
       display: flex;
       align-items: center;
       justify-content: space-between;
-	}
-	.language {
-		&__active {
-			font-weight: 600;
-			cursor: pointer;
-		}
-	}
+      max-width: calc(1180px + 40px * 2);
+      height: 100%;
+    }
+    .logo {
+      width: 100px;
+      position: relative;
+      img {
+        width: 180px;
+        left: -47px;
+        position: relative;
+        top: -9px;
+      }
+    }
+    .language {
+      &__active {
+        font-weight: 600;
+        cursor: pointer;
+      }
+    }
   }
 
   nav {
-    // width: calc(100% - 230px - 230px);
     height: 100%;
-
-    // @media screen and (max-width: 1280px) {
-    //   display: none;
-    // }
 
     ul {
       display: flex;
@@ -41,38 +67,45 @@ header {
         height: 100%;
 
         a {
-          padding: 26px 16px;
+       
           color: #2c256b;
           // position: relative;
           transition: 0.2s;
-          font-size: 17px;
-          letter-spacing: 1px;
+          font-size: 16px;
+          font-weight: 600;
+          text-transform: uppercase;
+          // letter-spacing: 1px;
           height: 100%;
-          display: flex;
-          align-items: center;
-		  text-align: center;
-		  position: relative;
-
+          padding: 0 28px;
+          display: block;
           // @media screen and (max-width: 1600px) {
           //     padding: 0 20px;
           // }
-          &:after {
-			content: "";
-			height: 4px;
-			background: #a40c0f;
-			width: 100%;
-			position: absolute;
-			bottom: -2px;
-			left: 0;
-			opacity: 0;
-			visibility: hidden;
-			transition: 0.2s;
-		  }
-
+          span {
+            position: relative;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            padding: 30px 0;
+            &:after {
+              content: "";
+              height: 3px;
+              background: #db272f;
+              width: 100%;
+              position: absolute;
+              bottom: -2px;
+              left: 0;
+              opacity: 0;
+              visibility: hidden;
+              transition: 0.2s;
+            }
+          }
 
           &:hover {
             // color: $c-light-blue;
-            &:after {
+            span:after {
               opacity: 1;
               visibility: visible;
             }
@@ -81,7 +114,7 @@ header {
           &.active {
             // color: $c-light-blue;
 
-            &:after {
+            span:after {
               opacity: 1;
               visibility: visible;
             }
