--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -4,156 +4,152 @@
   justify-content: space-between;
 
   .header-image {
-    width: 50%;
+    width: 54%;
     background: url(../img/main-header-bg.png) no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: calc(100% - 200px);
+    height: 848px;
+    // min-height: calc(100% - 200px);
   }
 
   .header-description {
-    width: 50%;
+    width: 46%;
     color: #fff;
     background: #2c256b;
-    display: flex;
-    align-content: center;
-    flex-wrap: wrap;
-    min-height: calc(100% - 200px);
+    // display: flex;
+    // align-content: center;
+    // flex-wrap: wrap;
+    height: 848px;
     .container {
-      padding-right: 40%;
+      padding: 255px 54px 0;
     }
     &__title {
-      font-size: 52px;
+      font-size: 70px;
+      font-weight: 600;
+      margin-top: 14px;
+      letter-spacing: 1.5px;
+      line-height: 1em;
       span {
-        font-size: 38px;
+        font-size: 46px;
+        letter-spacing: 1px;
+        position: relative;
+        margin-top: 13px;
+        display: block;
+        font-weight: 300;
+        &:after {
+          content: "";
+          height: 3px;
+          width: 109px;
+          background: #db272f;
+          display: block;
+          margin: 11px 0px 25px 0;
+        }
       }
     }
     &__subtitle {
       font-size: 36px;
+      display: flex;
+      align-items: flex-end;
+      letter-spacing: 0.2px;
+      img {
+        margin-right: 0;
+        width: 40px;
+        height: 100px;
+        display: block;
+        letter-spacing: 1px;
+      }
     }
     &__text {
       font-size: 16px;
+      width: 70%;
+      line-height: 1.5em;
     }
     .btn {
-      margin-top: 20px;
+      margin-top: 40px;
     }
   }
   .socials {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 6px;
     bottom: 0;
     margin: auto;
+    display: flex;
+    height: 118px;
+    width: 49px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: column;
+    &__item {
+      width: 49px;
+      height: 49px;
+      background: #fff;
+      display: block;
+    }
   }
 
   .slick {
     width: 100%;
     &__item {
-      height: 150px;
-      padding: 20px;
-      background: #444;
-      // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      // border-radius: 8px;
+      height: 140px;
+      padding: 0px 0;
+
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin: 18px 15px;
+      margin: 0px 10px;
       outline: none;
+      &--img {
+        width: 100%;
+        height: 107px;
+        object-fit: cover;
+      }
+      &--text {
+        font-size: 14px;
+        color: #373737;
+        text-align: center;
+        margin-top: 8px;
+        width: 100%;
+      }
     }
   }
 
-  .slick-slider {
+  .slick-slider-wrapper {
     width: 100%;
-    height: 200px;
-    padding: 0 100px;
-    //     .slick-controls-wrapper {
-    //         width: 296px;
-    //         left: 0;
-    //         right: 0;
-    //         margin: 34px auto 0;
-    //         position: relative;
+    // height: 200px;
+    padding: 35px 40px 16px 40px;
+    .slick-prev,
+    .slick-next {
+      border: none;
+      top: 0;
+      bottom: 0;
+      cursor: pointer;
+      outline: none;
+      transition: 0.2s;
+      bottom: 34px;
+      top: 0;
+      margin: auto;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
 
-    //         @media screen and (max-width: 720px) {
-    //             display: none;
-    //         }
-    //     }
+    .slick-prev.slick-arrow {
+      width: 32px;
+      height: 50px;
+      position: absolute;
+      left: -34px;
+      font-size: 0;
+      background: #db272f;
+    }
 
-    //     .slick-dots {
-    //         width: 250px;
-    //         left: 0;
-    //         right: 0;
-    //         margin: auto;
-    //         position: absolute;
-    //         top: calc(100% + 38px);
-    //         display: block;
-    //         padding: 0;
-    //         list-style: none;
-    //         text-align: center;
-
-    //         li {
-    //             position: relative;
-    //             display: inline-block;
-    //             width: 20px;
-    //             height: 20px;
-    //             margin: 0 10px;
-    //             padding: 0;
-    //             cursor: pointer;
-
-    //             &.slick-active {
-    //                 button {
-    //                     background: #FFFF00;
-    //                     width: 8px;
-    //                     height: 8px;
-    //                     padding: 3px;
-    //                 }
-    //             }
-
-    //             button {
-    //                 font-size: 0;
-    //                 line-height: 0;
-    //                 display: block;
-    //                 width: 10px;
-    //                 height: 10px;
-    //                 margin: auto;
-    //                 padding: 5px;
-    //                 cursor: pointer;
-    //                 color: transparent;
-    //                 border: none;
-    //                 outline: none;
-    //                 background: #DADADA;
-    //                 border-radius: 100%;
-    //             }
-    //         }
-    //     }
-
-    //     .slick-prev,
-    //     .slick-next {
-    //         border: none;
-    //         top: 0;
-    //         bottom: 0;
-    //         cursor: pointer;
-    //         outline: none;
-    //         transition: 0.2s;
-
-    //         &:hover {
-    //             transform: scale(1.1);
-    //         }
-    //     }
-
-    //     .slick-prev.slick-arrow {
-    //         width: 35px;
-    //         height: 32px;
-    //         position: absolute;
-    //         left: 0;
-    //         background: url(../img/left-arrow.svg) no-repeat;
-    //     }
-
-    //     .slick-next.slick-arrow {
-    //         width: 35px;
-    //         height: 32px;
-    //         position: absolute;
-    //         right: 0;
-    //         background: url(../img/right-arrow.svg) no-repeat;
-    //     }
+    .slick-next.slick-arrow {
+      width: 32px;
+      height: 50px;
+      position: absolute;
+      right: -34px;
+      font-size: 0;
+      background: #db272f;
+    }
   }
 }
