--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "buttons.scss";
 @import "fonts.scss";
 @import "home-page.scss";
+@import "not-found-page.scss";
 
 body {
   font-family: "Raleway regular", sans-serif;
@@ -12,7 +13,8 @@ body {
 
 .container {
   width: 100%;
-  max-width: 1304px;
+  // max-width: 1304px;
+  max-width: 1254px;
   min-width: 300px;
   margin: auto;
   padding: 0 40px;
@@ -23,9 +25,65 @@ body {
 }
 
 main {
-  height: 100%;
-  min-height: calc(100% -36px);
-  max-height: calc(100% -36px);
-
 }
 
+.bottom-panel {
+  background: #f4f4fd;
+  width: 100%;
+  // height: 200px;
+  margin-top: 20px;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .line {
+      border-left: 1px solid #9895ba;
+      margin: 0 50px;
+      height: 70px;
+    }
+    .logo {
+      width: 200px;
+      display: block;
+      margin-right: 80px;
+      img {
+        width: 100%;
+        display: block;
+      }
+    }
+  }
+  ul {
+    li {
+      text-align: left;
+      margin-bottom: 10px;
+      a {
+        font-size: 16px;
+        color: #383838;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .form {
+    text-align: left;
+    &-title {
+      margin-bottom: 20px;
+    }
+    input {
+      width: 250px;
+      background: none;
+      border-radius: 20px;
+      border: 1px solid #123;
+      padding: 8px 14px;
+      outline: none;
+      margin-right: 10px;
+    }
+  }
+}
