--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -13,10 +13,22 @@
     background: none;
     text-transform: uppercase;
     font-size: 14px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    img {
+      position: absolute;
+      width: 18px;
+      transform: rotate(180deg);
+      right: 27px;
+    }
+    // span {
+    //   transition: 0.1s;
+    // }
     &:hover {
-      span {
-        transform: scale(1.6);
-      }
+      // span {
+        transform: scale(1.02);
+      // }
     }
   }
   &-subscribe {
