--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,7 +2,7 @@ header {
   position: relative;
   &:before {
     content: "";
-    height: 5px;
+    height: 4px;
     background: #db272f;
     width: 100%;
     left: 0;
@@ -26,17 +26,21 @@ header {
     background: #fff;
     display: flex;
     justify-content: space-between;
-
+    &__left {
+      width: 180px;
+    }
     .container {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      // justify-content: space-between;
       max-width: calc(1180px + 40px * 2);
       height: 100%;
+      position: relative;
     }
     .logo {
       width: 100px;
       position: relative;
+      display: block;
       img {
         width: 180px;
         left: -47px;
@@ -45,9 +49,28 @@ header {
       }
     }
     .language {
+      position: absolute;
+      right: 48px;
+      padding-top: 5px;
       &__active {
+        font-size: 16px;
         font-weight: 600;
         cursor: pointer;
+        position: relative;
+        display: flex;
+        // justify-content: center;?
+        align-items: center;
+        &:after {
+          content: '';
+          margin-top: -4px;
+          margin-left: 5px;
+          border: solid #2c256b;
+          border-width: 0 1px 1px 0;
+          display: inline-block;
+          padding: 3px;
+          transform: rotate(45deg);
+          -webkit-transform: rotate(45deg);
+        }
       }
     }
   }
@@ -72,11 +95,11 @@ header {
           // position: relative;
           transition: 0.2s;
           font-size: 16px;
-          font-weight: 600;
+          font-weight: 800;
           text-transform: uppercase;
           // letter-spacing: 1px;
           height: 100%;
-          padding: 0 28px;
+          padding: 0 29px 0 28px;
           display: block;
           // @media screen and (max-width: 1600px) {
           //     padding: 0 20px;
@@ -95,7 +118,7 @@ header {
               background: #db272f;
               width: 100%;
               position: absolute;
-              bottom: -2px;
+              bottom: -1px;
               left: 0;
               opacity: 0;
               visibility: hidden;
