--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -34,11 +34,12 @@
   &-subscribe {
     border-radius: 20px;
     background: #db272f;
-    padding: 8px 14px;
+    padding: 12px 14px 10px 14px;
     font-weight: 600;
     border: none;
     color: #fff;
-    width: 150px;
+    width: 166px;
+    font-size: 14px;
   }
 
 }
