--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -9,7 +9,7 @@ footer {
         justify-content: space-between;
     }
     .copyright {
-        color: #ffffff;
+        color: #a09dbc;
         font-size: 12px;
     }
 }
