--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -8,18 +8,20 @@
   > .container {
     margin: initial;
     width: 100%;
+    padding-top: 30px;
   }
   .title {
     color: #2d2a6a;
     font-size: 375px;
     font-weight: 600;
+    letter-spacing: -3.3px;
     // width: 100%;
   }
   .descr {
     font-size: 36px;
     color: #383838;
     // width: 100%;
-    margin-top: 20px;
+    margin-top: 30px;
   }
   .link {
     margin-top: 30px;
