--- a/scss/header.scss
+++ b/scss/header.scss
@@ -27,13 +27,13 @@ header {
     display: flex;
     justify-content: space-between;
     &__left {
-      width: 180px;
+      width: 225px;
     }
     .container {
       display: flex;
       align-items: center;
       // justify-content: space-between;
-      max-width: calc(1180px + 40px * 2);
+  
       height: 100%;
       position: relative;
     }
@@ -43,14 +43,14 @@ header {
       display: block;
       img {
         width: 180px;
-        left: -47px;
+        // left: -47px;
         position: relative;
         top: -9px;
       }
     }
     .language {
       position: absolute;
-      right: 48px;
+      right: 98px;
       padding-top: 5px;
       &__active {
         font-size: 16px;
