--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,8 @@ body {
 .container {
   width: 100%;
   // max-width: 1304px;
-  max-width: 1254px;
+  // max-width: 1254px;
+  max-width: calc(1355px);
   min-width: 300px;
   margin: auto;
   padding: 0 40px;
@@ -32,38 +33,44 @@ main {
   width: 100%;
   // height: 200px;
   margin-top: 20px;
+  padding: 15px 0;
   .container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
   }
 
   &__list {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     .line {
       border-left: 1px solid #9895ba;
-      margin: 0 50px;
-      height: 70px;
+      margin: 0 66px 0 60px;
+      height: 77px;
+      align-self: center;
     }
     .logo {
-      width: 200px;
+      width: 218px;
       display: block;
       margin-right: 80px;
       img {
-        width: 100%;
+        width: 180px;
         display: block;
       }
     }
   }
   ul {
+    padding-top: 26px;
+    align-self: flex-start;
     li {
       text-align: left;
-      margin-bottom: 10px;
+      margin-bottom: 11px;
       a {
         font-size: 16px;
-        color: #383838;
+        color: #77777b;
+        font-weight: 400;
+        letter-spacing: 0.4px;
         &:hover {
           text-decoration: underline;
         }
@@ -73,17 +80,40 @@ main {
 
   .form {
     text-align: left;
+    width: 512px;
+    display: flex;
+    flex-wrap: wrap;
+    // justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 19px;
     &-title {
-      margin-bottom: 20px;
+      width: 100%;
+      letter-spacing: 0.1px;
     }
     input {
-      width: 250px;
+      width: 266px;
       background: none;
       border-radius: 20px;
-      border: 1px solid #123;
-      padding: 8px 14px;
+      border: 1px solid #b3b1cd;
+      padding: 12px 14px 10px 20px;
       outline: none;
+      font-size: 14px;
       margin-right: 10px;
+      font-family: "Raleway regular", sans-serif;
+      margin-right: 23px;
+      
+      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: #a9a8ad;
+      }
+      &::-moz-placeholder { /* Firefox 19+ */
+        color: #a9a8ad;
+      }
+      &:-ms-input-placeholder { /* IE 10+ */
+        color: #a9a8ad;
+      }
+      &:-moz-placeholder { /* Firefox 18- */
+        color: #a9a8ad;
+      }
     }
   }
 }
