--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -5,7 +5,7 @@
 
   .header-image {
     width: 54%;
-    background: url(../img/main-header-bg.png) no-repeat;
+    background: url(../img/main-header-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: 848px;
