--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -27,7 +27,7 @@
     // }
     &:hover {
       // span {
-        transform: scale(1.02);
+      transform: scale(1.02);
       // }
     }
   }
@@ -41,5 +41,14 @@
     width: 166px;
     font-size: 14px;
   }
-
+  &-modal-small {
+    background: #2c256b;
+    border-radius: 20px;
+    padding: 12px 14px 12px 14px;
+    font-weight: 600;
+    border: none;
+    color: #fff;
+    width: 166px;
+    font-size: 14px;
+  }
 }
