--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "header.scss";
 @import "buttons.scss";
 @import "fonts.scss";
+@import "modal.scss";
 @import "home-page.scss";
 @import "not-found-page.scss";
 @import "about-page.scss";
