--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -44,11 +44,17 @@
   &-modal-small {
     background: #2c256b;
     border-radius: 20px;
-    padding: 12px 14px 12px 14px;
+    padding: 11px 14px 11px 14px;
     font-weight: 600;
     border: none;
     color: #fff;
     width: 166px;
     font-size: 14px;
+    border: 1px solid #2c256b;
+    &:hover {
+      background: #fff;
+      color: #2c256b;
+      border: 1px solid #2c256b;
+    }
   }
 }
