--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -42,6 +42,10 @@
                 align-items: center;
                 cursor: pointer;
                 font-weight: 600;
+                transition: 0.2s;
+                &:hover {
+                    background: #847fa8;
+                }
                 &.active {
                     background: #847fa8;
                 }
