--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: calc(1355px);
+  max-width: 1255px;
   min-width: 300px;
   margin: auto;
   padding: 0 40px;
@@ -26,24 +26,73 @@ body {
 }
 
 main {
+  min-height: calc(100% - 44px);
+  padding-top: 100px;
+}
+
+.top-panel {
+  width: 100%;
+  padding: 70px 0 46px 0;
+  .container {
+  }
+  .breadcrumbs {
+    &__item {
+      font-size: 14px;
+      color: #fff;
+      letter-spacing: 0.2px;
+      span {
+        text-decoration: underline;
+      }
+      &:after {
+        content: "/";
+        margin: 0 3px 0 7px;
+      }
+      &:last-child {
+        &:after {
+          content: none;
+        }
+      }
+    }
+  }
+  &__title {
+    font-size: 48px;
+    color: #fff;
+    text-transform: uppercase;
+    margin: 7px 0 0px;
+    &:after {
+      content: "";
+      height: 4px;
+      width: 114px;
+      background: #db272f;
+      display: block;
+      margin: 20px 0 24px;
+    }
+    img {
+      width: 100px;
+    }
+  }
+  &__descr {
+    font-size: 14px;
+    color: #fff;
+    line-height: 1.8em;
+    letter-spacing: 0px;
+  }
 }
 
 .bottom-panel {
   background: #f4f4fd;
   width: 100%;
-  // height: 200px;
   margin-top: 20px;
   padding: 15px 0;
   .container {
+    max-width: calc(1355px);
     display: flex;
     justify-content: space-between;
-    // align-items: center;
   }
 
   &__list {
     display: flex;
     justify-content: space-between;
-    // align-items: center;
     .line {
       border-left: 1px solid #9895ba;
       margin: 0 66px 0 60px;
@@ -101,17 +150,21 @@ main {
       margin-right: 10px;
       font-family: "Raleway regular", sans-serif;
       margin-right: 23px;
-      
-      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+
+      &::-webkit-input-placeholder {
+        /* Chrome/Opera/Safari */
         color: #a9a8ad;
       }
-      &::-moz-placeholder { /* Firefox 19+ */
+      &::-moz-placeholder {
+        /* Firefox 19+ */
         color: #a9a8ad;
       }
-      &:-ms-input-placeholder { /* IE 10+ */
+      &:-ms-input-placeholder {
+        /* IE 10+ */
         color: #a9a8ad;
       }
-      &:-moz-placeholder { /* Firefox 18- */
+      &:-moz-placeholder {
+        /* Firefox 18- */
         color: #a9a8ad;
       }
     }
