--- a/scss/header.scss
+++ b/scss/header.scss
@@ -34,7 +34,7 @@ header {
       display: flex;
       align-items: center;
       // justify-content: space-between;
-  
+      max-width: calc(1355px);
       height: 100%;
       position: relative;
     }
