--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
+  padding-top: 0;
   .header-image {
     width: 54%;
     background: url(../img/main-header-bg.jpg) no-repeat;
