--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -118,9 +118,13 @@
       flex-wrap: wrap;
       &-item {
         width: calc(100% / 4);
-        height: 200px;
+        height: 250px;
         color: #fff;
-        padding: 20px;
+        overflow: hidden;
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
         &--number {
           font-size: 72px;
           font-family: 'PT Sans', sans-serif;
@@ -136,6 +140,7 @@
         &:nth-child(7),
         &:nth-child(10),
         &:nth-child(12) {
+          padding: 20px;
           background: #2c256b;
         }
       }
