--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -22,25 +22,26 @@
     background: url(../img/abcompanysky.png) no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 103px 0 100px;
+    padding: 103px 0 84px;
     margin-top: 42px;
     .container {
       padding: 0 136px;
     }
     &__title {
       color: #fff;
-      font-size: 32px;
+      font-size: 47px;
       text-align: center;
       text-transform: uppercase;
       position: absolute;
       left: 0;
       right: 0;
-      margin-top: -15px;
+      margin-top: -35px;
+      letter-spacing: 0.8px;
     }
     &__text {
       color: #fff;
       text-align: center;
-      padding: 70px 100px;
+      padding: 70px 100px 60px 100px;
       border: 8px solid rgba(255, 255, 255, 0.3);
       border-top: none;
       position: relative;
