--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -1,10 +1,8 @@
 .about-page {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
 
   > .container {
-
   }
   .top-panel {
     background: url(../img/abcompany.png);
@@ -14,7 +12,8 @@
   }
 
   .bottom-panel {
-    margin-top: 70px;
+    margin-top: 82px;
+    align-self: flex-end;
   }
 
   .mission {
@@ -74,8 +73,8 @@
   }
 
   .visia {
-    padding: 100px 0;
-    border-bottom: 2px solid #f4f4fd;
+    padding: 32px 0 99px;
+    border-bottom: 4px solid #f4f4fd;
     width: 100%;
     .container {
       display: flex;
@@ -88,14 +87,14 @@
       font-size: 0;
       z-index: 1;
       &:after {
-        content: '';
+        content: "";
         z-index: -1;
         position: absolute;
         top: 20px;
         left: -20px;
-        width: calc(100% - 10px);
-        height: calc(100% - 10px);
-        border: 5px solid #e5e5ed;
+        width: calc(100% - 15px);
+        height: calc(100% - 8px);
+        border: 4px solid #e5e5ed;
       }
       img {
         display: block;
@@ -107,35 +106,47 @@
     }
     &__text {
       width: 50%;
-      padding: 0 10px;
+      padding: 0 15px 0 18px;
+      line-height: 1.5em;
+      margin-top: -5px;
       p + p {
-        margin-top: 10px;
+        margin-top: 24px;
       }
     }
   }
 
   .values {
     width: 100%;
+    .container {
+      padding: 0;
+    }
     &__list {
       display: flex;
       flex-wrap: wrap;
       &-item {
         width: calc(100% / 4);
-        height: 250px;
+        height: 284px;
         color: #fff;
         overflow: hidden;
         img {
           width: 100%;
+          height: 100%;
           object-fit: cover;
         }
         &--number {
-          font-size: 72px;
-          font-family: 'PT Sans', sans-serif;
+          font-size: 98px;
+          font-family: PT Sans, sans-serif;
+          line-height: 98px;
+          position: relative;
+          z-index: 2;
         }
         &--text {
-          font-size: 18px;
+          font-size: 24px;
           font-weight: 600;
           text-transform: uppercase;
+          margin-top: 20px;
+          position: relative;
+          z-index: 2;
         }
         &:nth-child(2),
         &:nth-child(4),
@@ -143,8 +154,56 @@
         &:nth-child(7),
         &:nth-child(10),
         &:nth-child(12) {
-          padding: 20px;
+          padding: 20px 30px;
           background: #2c256b;
+          position: relative;
+          &:after {
+            content: "";
+            position: absolute;
+            background-size: cover !important;
+          }
+        }
+        &:nth-child(2):after {
+          background: url(../img/analysis.svg) no-repeat;
+          right: 34px;
+          bottom: 24px;
+          width: 141px;
+          height: 141px;
+        }
+        &:nth-child(4):after {
+          background: url(../img/tactical.svg) no-repeat;
+          right: 34px;
+          bottom: 30px;
+          width: 141px;
+          height: 141px;
+        }
+        &:nth-child(5):after {
+          background: url(../img/camera.svg) no-repeat;
+          right: 24px;
+          bottom: 21px;
+          width: 150px;
+          height: 150px;
+        }
+        &:nth-child(7):after {
+          background: url(../img/opportunity.svg) no-repeat;
+          right: 27px;
+          bottom: 23px;
+          width: 141px;
+          height: 141px;
+        }
+        &:nth-child(10):after {
+          background: url(../img/frship.svg) no-repeat;
+          right: 32px;
+          bottom: 23px;
+          width: 143px;
+          height: 143px;
+        }
+        &:nth-child(12):after {
+          background: url(../img/charity.svg) no-repeat;
+          right: 9px;
+          bottom: 23px;
+          width: 141px;
+          height: 141px;
         }
       }
     }
@@ -164,10 +223,14 @@
       letter-spacing: 1px;
     }
     &-visia {
-      margin: 40px 0 40px;
+      margin: 40px 0 28px 0px;
+      font-size: 48px;
+      font-weight: 300;
     }
     &-values {
-      margin: 40px 0 40px;
+      margin: 65px 0 41px 0px;
+      font-size: 48px;
+      font-weight: 300;
     }
   }
 
@@ -179,6 +242,11 @@
       margin-bottom: 43px;
       position: relative;
       height: 148px;
+
+      display: flex;
+      flex-wrap: wrap;
+      align-content: center;
+
       @media screen and (max-width: 1280px) {
         height: auto;
       }
