--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -118,10 +118,34 @@
       justify-content: space-between;
       margin: 0px 10px;
       outline: none;
+      position: relative;
+      &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba(255,255,255, 0.55);
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.2s;
+      }
+      &:hover {
+        .slick__item--img {
+          transform: scale(1.05);
+        }
+        &:after {
+          opacity: 1;
+          visibility: visible;
+          transform: scale(1.05);
+        }
+      }
       &--img {
         width: 100%;
         height: 107px;
         object-fit: cover;
+        transition: 0.2s; 
       }
       &--text {
         font-size: 14px;
