--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -57,4 +57,19 @@
       border: 1px solid #2c256b;
     }
   }
+  &-distribution {
+    background: #2d2a6a;
+    padding: 14px 14px 14px 14px;
+    font-weight: 600;
+    border: none;
+    color: #fff;
+    width: 166px;
+    font-size: 14px;
+    border: 1px solid #2c256b;
+    text-transform: uppercase;
+    &.transparent {
+      background: none;
+      color: #2c256b;
+    }
+  }
 }
