--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -1,8 +1,73 @@
 .distribution-page {
   display: flex;
   flex-wrap: wrap;
-
+  align-items: center;
   .top-panel {
     background: url(../img/distblue.png);
+  }
+  .bottom-panel {
+    margin-top: 0;
+  }
+
+  .map {
+    width: 100%;
+    display: flex;
+    background: #f4f4fd;
+    &__image {
+      width: 60%;
+      img {
+        width: 100%;
+        object-fit: cover;
+        height: 730px;
+        display: block;
+      }
+    }
+    &__info {
+      width: 40%;
+      display: flex;
+      align-content: center;
+      flex-wrap: wrap;
+      &-buttons {
+        width: 100%;
+        .btn {
+          margin-right: 20px;
+        }
+      }
+      &-title {
+        text-transform: uppercase;
+        font-weight: 600;
+        width: 100%;
+        margin-top: 50px;
+        margin-bottom: 10px;
+      }
+      &-text {
+        width: 100%;
+        max-width: 420px;
+      }
+      ul {
+        width: 100%;
+        li {
+          position: relative;
+          margin-bottom: 10px;
+          display: flex;
+          align-items: flex-start;
+          width: 400px;
+          &:before {
+            content: '';
+            background: #2c256b;
+            width: 15px;
+            height: 15px;
+            margin-right: 20px;
+            display: block;
+          }
+        }
+      }
+    }
+  }
+  .text-block {
+    background: #2d2a6a;
+    width: 100%;
+    color: #fff;
+    padding: 50px 0;
   }
 }
