--- a/scss/header.scss
+++ b/scss/header.scss
@@ -79,7 +79,7 @@ header {
   nav {
     height: 100%;
 
-    ul {
+    > ul {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -89,6 +89,44 @@ header {
         font-size: 14px;
         font-weight: 500;
         height: 100%;
+        position: relative;
+
+        &:hover {
+          ul {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
+        ul {
+          background: #fff;
+          position: absolute;
+          flex-wrap: wrap;
+          left: 30px;
+          margin-top: 1px;
+          visibility: hidden;
+          opacity: 0;
+          width: 150%;
+          padding: 5px 20px;
+          transition: 0.2s;
+          li {
+            &:first-child {
+              border-bottom: 1px solid #e4e4ec;
+            }
+            &:hover {
+              a {
+                color: #000;
+                text-decoration: underline;
+              }
+            }
+            a {
+              color: #525252;
+              text-transform: initial;
+              font-weight: 300;
+              text-align: left;
+              padding: 10px 0px;
+            }
+          }
+        }
 
         a {
        
@@ -102,6 +140,7 @@ header {
           height: 100%;
           padding: 0 29px 0 28px;
           display: block;
+          position: relative;
           // @media screen and (max-width: 1600px) {
           //     padding: 0 20px;
           // }
