--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,7 +77,7 @@ main {
   }
   &__descr {
     font-size: 14px;
-    color: #fff;
+    color: #bcbbcb;
     line-height: 1.8em;
     letter-spacing: 0px;
   }
