--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -59,17 +59,19 @@
   }
   &-distribution {
     background: #2d2a6a;
-    padding: 14px 14px 14px 14px;
+    padding: 20px 20px 20px 20px;
     font-weight: 600;
     border: none;
     color: #fff;
-    width: 166px;
-    font-size: 14px;
+    width: 250px;
+    font-size: 20px;
     border: 1px solid #2c256b;
     text-transform: uppercase;
     &.transparent {
       background: none;
+      width: 200px;
       color: #2c256b;
+      font-weight: 300;
     }
   }
 }
