--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -7,7 +7,7 @@
   > .container {
     margin: initial;
     width: 100%;
-    padding-top: 30px;
+    // padding-top: 30px;
   }
   .title {
     color: #2d2a6a;
