--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import "not-found-page.scss";
 @import "about-page.scss";
 @import "distribution-page.scss";
+@import "products-page.scss";
 
 body {
   font-family: "Raleway regular", sans-serif;
