--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,8 @@
 @import "about-page.scss";
 @import "distribution-page.scss";
 @import "products-page.scss";
+@import "career-page.scss";
+@import "jquery.mCustomScrollbar.min.scss";
 
 body {
   font-family: "Raleway regular", sans-serif;
