--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 @import "distribution-page.scss";
 @import "products-page.scss";
 @import "career-page.scss";
+@import "contacts-page.scss";
 @import "jquery.mCustomScrollbar.min.scss";
 
 body {
