--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import "about-page.scss";
 @import "distribution-page.scss";
 @import "products-page.scss";
+@import "products-import-page.scss";
 @import "career-page.scss";
 @import "contacts-page.scss";
 @import "jquery.mCustomScrollbar.min.scss";
