--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   align-items: flex-end;
   justify-content: center;
+  padding: 0;
   > .container {
     margin: initial;
     width: 100%;
