--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,6 +68,7 @@ main {
     color: #fff;
     text-transform: uppercase;
     margin: 7px 0 0px;
+    position: relative;
     &:after {
       content: "";
       height: 4px;
@@ -77,7 +78,7 @@ main {
       margin: 20px 0 24px;
     }
     img {
-      width: 100px;
+      position: absolute;
     }
   }
   &__descr {
