--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -119,17 +119,40 @@
 
   .values {
     width: 100%;
+    overflow: hidden;
     .container {
       padding: 0;
     }
     &__list {
       display: flex;
       flex-wrap: wrap;
+      &[data-animate="true"] {
+        .values__list-item {
+          animation-duration: 1.5s;
+          animation-name: slideinDiagonal;
+        }
+      }
       &-item {
         width: calc(100% / 4);
         height: 284px;
         color: #fff;
         overflow: hidden;
+        transform: translate(-200%, -200%);
+        opacity: 0;
+        visibility: hidden;
+        animation-fill-mode: forwards;
+        &:nth-child(1) {animation-delay: 0s;}
+        &:nth-child(2) {animation-delay: 0.2s;}
+        &:nth-child(3) {animation-delay: 0.4s;}
+        &:nth-child(4) {animation-delay: 0.6s;}
+        &:nth-child(5) {animation-delay: 0.8s;}
+        &:nth-child(6) {animation-delay: 1s;}
+        &:nth-child(7) {animation-delay: 1.2s;}
+        &:nth-child(8) {animation-delay: 1.4s;}
+        &:nth-child(9) {animation-delay: 1.6s;}
+        &:nth-child(10) {animation-delay: 1.8s;}
+        &:nth-child(11) {animation-delay: 2s;}
+        &:nth-child(12) {animation-delay: 2.2s;}
         img {
           width: 100%;
           height: 100%;
@@ -248,6 +271,23 @@
       display: flex;
       flex-wrap: wrap;
       align-content: center;
+
+      &[data-animate="true"] {
+        animation-duration: 1.5s;
+        animation-name: slideinUp;
+      }
+
+      &:nth-child(1) {
+        animation-delay: 0s;
+      }
+
+      &:nth-child(2) {
+        animation-delay: 0.5s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 1s;
+      }
 
       @media screen and (max-width: 1280px) {
         height: auto;
