--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@
 @import "products-import-page.scss";
 @import "career-page.scss";
 @import "contacts-page.scss";
-@import "jquery.mCustomScrollbar.min.scss";
+// @import "jquery.mCustomScrollbar.min.scss";
 
 body {
   font-family: "Raleway regular", sans-serif;
