--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -108,6 +108,11 @@
                 left: 0;
             }
         }
+        .btn  {
+            width: 280px;
+            margin: auto;
+            display: block;
+        }
     }
     
     &.opened {
