--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -259,10 +259,61 @@
     }
   }
 
+  .mega-border {
+    &::before,
+    &::after {
+      // Set border to invisible, so we don't see a 4px border on a 0x0 element before the transition starts
+      border: 1px solid transparent;
+      width: 0;
+      height: 0;
+      content: '';
+      position: absolute;
+    }
+  
+    // This covers the top & right borders (expands right, then down)
+    &::before {
+      top: 0;
+      left: -4px;
+    }
+  
+    // And this the bottom & left borders (expands left, then up)
+    &::after {
+      bottom: 0;
+      right: 0;
+    }
+    
+    // Hover styles
+    // &:hover::before,
+    // &:hover::after {
+    //   width: 100%;
+    //   height: 100%;
+    // }
+  
+    &::before {
+      // border-color: #fff;
+      border-radius: 10px 10px 0px 10px;
+        border-top-color: #fff; // Make borders visible
+        border-right-color: #fff;
+        transition:
+        width 1s ease-out, // Width expands first
+        height 1s ease-out 1s; // And then height
+    }
+  
+    &::after {
+      // border-color: #fff;
+      border-radius: 10px;
+        border-bottom-color: #fff; // Make borders visible
+        border-left-color: #fff;
+        transition:
+        border-color 0s ease-out 2s, // Wait for ::before to finish before showing border
+        width 1s ease-out 2s, // And then exanding width
+        height 1s ease-out 2s; // And finally height
+    }
+  }
+
+
   .about-list {
     &__item {
-      border-radius: 10px;
-      border: 1px solid #7e7aa4;
       padding: 18px 27px 9px 27px;
       margin-bottom: 43px;
       position: relative;
@@ -271,14 +322,27 @@
       display: flex;
       flex-wrap: wrap;
       align-content: center;
+    
 
       &[data-animate="true"] {
-        animation-duration: 1.5s;
-        animation-name: slideinUp;
+        &::before,
+        &::after {
+          width: 100%;
+          height: 100%;
+        }
+        &:before {
+          border-top-color: #7e7aa4;
+          border-right-color: #7e7aa4;
+        }
+        &:after {
+          border-bottom-color: #7e7aa4;
+          border-left-color: #7e7aa4;
+        }
       }
 
       &:nth-child(1) {
         animation-delay: 0s;
+        @extend .mega-border;
       }
 
       &:nth-child(2) {
@@ -287,6 +351,7 @@
 
       &:nth-child(3) {
         animation-delay: 1s;
+        // @extend .mega-border;
       }
 
       @media screen and (max-width: 1280px) {
@@ -333,6 +398,7 @@
       }
       &--image {
         position: absolute;
+        z-index: 1;
         top: -5px;
         bottom: 0;
         margin: auto;
