--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -1,13 +1,14 @@
 .btn {
   outline: none;
   cursor: pointer;
-  transition: 0.2s;
+  transition: 0.1s;
   font-family: "Raleway regular", sans-serif;
   &:active {
     transform: translateY(1px);
   }
-  &-header {
+  &-more {
     border: 1px solid #fff;
+    box-shadow: 0 0 1px 0 #2c256b;
     color: #fff;
     padding: 17px 109px 15px 28px;
     background: none;
@@ -22,13 +23,9 @@
       transform: rotate(180deg);
       right: 27px;
     }
-    // span {
-    //   transition: 0.1s;
-    // }
+
     &:hover {
-      // span {
-      transform: scale(1.02);
-      // }
+      box-shadow: 0 0 1px 0 #fff;
     }
   }
   &-subscribe {
@@ -82,5 +79,4 @@
     border: none;
     font-weight: 600;
   }
-
 }
