--- a/scss/header.scss
+++ b/scss/header.scss
@@ -13,13 +13,13 @@ header {
   .header-shadow {
     width: 100%;
     top: 113px;
-    position: fixed;
+    position: absolute;
     z-index: -1;
     height: 10px;
     box-shadow: 0 0 5px -2px #000;
   }
   .header-panel {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 80px;
     left: 0;
