--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -31,12 +31,18 @@
   &-subscribe {
     border-radius: 20px;
     background: #db272f;
+    border: 1px solid #db272f;
     padding: 12px 14px 10px 14px;
     font-weight: 600;
-    border: none;
+    // border: none;
     color: #fff;
     width: 166px;
     font-size: 14px;
+    &:hover {
+      background: none;
+      color: #db272f;
+      // border: 1px solid #db272f;
+    }
   }
   &-modal-small {
     background: #2c256b;
@@ -63,20 +69,33 @@
     font-size: 20px;
     border: 1px solid #2c256b;
     text-transform: uppercase;
+    &:hover {
+      background: none;
+      color: #2c256b;
+    }
     &.transparent {
       background: none;
       color: #2c256b;
       font-weight: 300;
+      &:hover {
+        background: #2c256b;
+        color: #fff;
+      }
     }
   }
   &-contacts {
     width: 100%;
     padding: 18px 20px;
     background: #db272f;
+    border: 1px solid #db272f;
     color: #fff;
     text-transform: uppercase;
     font-size: 16px;
-    border: none;
+    // border: none;
     font-weight: 600;
+    &:hover {
+      background: none;
+      color: #db272f;
+    }
   }
 }
