--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,7 @@ main {
   background-size: cover;
   align-self: flex-start;
   text-align: left;
+  background-position: center!important;
   .container {
   }
   .breadcrumbs {
