--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -55,7 +55,7 @@
         text {
           // color: #fff;
           fill: #fff;
-          font: normal 13px sans-serif; 
+          font: 600 13px "Raleway regular", sans-serif; 
         }
         @keyframes dash {
           from {
